--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,11 @@
+:root {
+    --original-white: #f2f2f2;
+}
+
 /* general tags */
 body {
     background-color: rgb(27, 27, 27);
-    color: #f2f2f2;
+    color: var(--original-white);
 
     font-family: "Inter", sans-serif;
     font-optical-sizing: auto;
@@ -84,7 +88,7 @@ img {
     height: 4px;
     width: 100%;
     flex-grow: 1 !important;
-    background-color: #f2f2f2;
+    background-color: var(--original-white);
 }
 
 /* main content */
@@ -145,7 +149,7 @@ img {
 .details__text--name {
     font-size: 3.5rem;
     line-height: 3.3rem;
-    border-bottom: 2px solid #f2f2f2;
+    border-bottom: 2px solid var(--original-white);
 }
 
 .details__text--name-en {
