--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 :root {
     --original-white: #f2f2f2;
+    --original-emphasis: #E7EF91;
 }
 
 /* general tags */
@@ -72,6 +73,12 @@ img {
 .arrow__image {
     transform: translateY(5rem);
     width: 2rem;
+}
+
+/* text-emphasis */
+.description__text--emphasis {
+    font-size: 1.5rem;
+    color: var(--original-emphasis);
 }
 
 /* header */
@@ -202,5 +209,19 @@ img {
 
 .favorite__text {
     margin: auto;
+    text-align: center;
+}
+
+/* personality section */
+.personality__main {
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    justify-content: center;
+    align-items: center;
+}
+
+.personality__text {
     text-align: center;
 }
