--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,6 +81,10 @@ img {
     color: var(--original-emphasis);
 }
 
+.description__text--sm {
+    font-size: 0.8rem;
+}
+
 /* header */
 .header__main {
     text-wrap: nowrap;
@@ -226,4 +230,33 @@ img {
 
 .personality__text {
     text-align: center;
+}
+
+/* products section */
+.products__main {
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    gap: 4.5rem;
+}
+
+.products__row-container {
+    display: flex;
+    align-items: center;
+    gap: 3.5rem;
+}
+
+.products__image-container {
+    width: 50%;
+}
+
+.products__text-container {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+}
+
+.products__text--name {
+    font-size: 1.5rem;
 }
