update: 768px以下のときに要素を縦並びの中央寄せにするように改良

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,7 @@ main {
 }
 
 #content__black {
+    z-index: 1;
     position: relative;
 }
 
@@ -144,6 +145,7 @@ img {
 /* main content */
 /* side */
 #side {
+    z-index: -10;
     width: max-content;
     display: flex;
     flex-direction: column;
@@ -207,6 +209,11 @@ img {
 .details__text--name-en {
     margin-left: 2rem;
     font-size: 2.5rem;
+}
+
+.details__name-space {
+    content: " ";
+    margin-left: 0.8rem;
 }
 
 .details__text--description {
@@ -394,4 +401,42 @@ img {
     padding: 0.7rem;
     font-size: 2rem;
     font-weight: 800;
+}
+
+@media screen and (max-width: 1440px) {
+
+    #content__black,
+    #content__white {
+        padding-inline: 3%;
+    }
+
+    .header__main-text {
+        font-size: 6rem;
+    }
+
+}
+
+@media screen and (max-width: 768px) {
+    html {
+        font-size: 14px;
+    }
+
+    #main {
+        padding: 3%;
+    }
+
+    .header-line__horizontal {
+        display: none;
+    }
+
+    /* details section */
+    .details__main {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    /* products section */
+    .products__row-container {
+        flex-direction: column;
+    }
 }
