update: productsセクションとtargetセクションの要素横幅を最大に変更

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -480,6 +480,16 @@ img {
     .products__row-container {
         flex-direction: column;
     }
+
+    .products__image-container,
+    .products__text-container {
+        width: 100%;
+    }
+
+    /* target section */
+    .target__main {
+        padding-inline: 0;
+    }
 }
 
 @media screen and (max-width: 375px) {}
