update: スマホ幅のheaderとメインコンテンツの左右余白を調整

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -494,7 +494,16 @@ img {
 }
 
 @media screen and (max-width: 375px) {
-    #main {
+    header {
+        padding-inline: 3%;
+    }
+
+    .header__main {
         width: 90%;
+    }
+
+    #main {
+        width: 100%;
+        padding-inline: 0;
     }
 }
