--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -442,7 +442,7 @@ img {
     }
 
     #main {
-        padding: 3%;
+        padding-inline: 3%;
         width: 80%;
     }
 
@@ -474,6 +474,25 @@ img {
     .details__text-container {
         width: 100%;
         gap: 1.5rem;
+    }
+
+    /* favorite section */
+    .favorite__images-container {
+        gap: 0;
+        margin-bottom: 4rem;
+    }
+
+    .favorite__image:first-child {
+        z-index: 1;
+        transform-origin: top left;
+        transform: scale(1.1);
+    }
+
+    .favorite__image:last-child {
+        z-index: -1;
+        transform-origin: top right;
+        transform: scale(1.1);
+        transform: translateY(4rem)
     }
 
     /* products section */
