update: セクションごとの下余白を変更

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -517,6 +517,10 @@ img {
         padding-inline: 3%;
     }
 
+    section {
+        margin-bottom: 14rem;
+    }
+
     .header__main {
         width: 90%;
     }
