update: 矢印をabsoluteに変更し、セクション間余白を調整

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -471,7 +471,8 @@ img {
     }
 
     .arrow__image--translate {
-        transform: translateY(0rem);
+        position: absolute;
+        transform: translate(-2rem, 0rem);
     }
 
     /* section general */
