--- a/assets/css/animate.css
+++ b/assets/css/animate.css
@@ -15,3 +15,28 @@
         transform: translateY(0);
     }
 }
+
+.text-shine-animation {
+    text-align: left;
+    position: relative;
+    background-image: linear-gradient(70deg,
+            rgb(211, 209, 209, 0.3) 45%,
+            #fff 50%,
+            rgb(211, 209, 209, 0.3) 55%);
+    background-size: 500% 100%;
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+    animation: shine 4s infinite;
+    animation-fill-mode: forwards;
+}
+
+@keyframes shine {
+    0% {
+        background-position: 70% 50%;
+    }
+
+    100% {
+        background-position: 0% 50%;
+    }
+}
