fix: #sideの文字列がちらつく問題を修正

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -187,7 +187,7 @@ img {
     vertical-align: bottom;
     transform: translateX(-2rem);
     color: #282828;
-    will-change: contents;
+    will-change: transform;
 }
 
 #main {
